# halres-downloader

./: .gitignore  Cargo.toml  urls.csv
src/: downloader.rs  lib.rs  main.rs  processor.rs
